--- a/index.html
+++ b/index.html
@@ -501,36 +501,6 @@
                     </div>
                 </div>
 
-                <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                  <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
-                    <h4>Card 1</h4>
-                    <p>Card</p>
-                    <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                  <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
-                    <h4>Card 3</h4>
-                    <p>Card</p>
-                    <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                  <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                  <div class="portfolio-info">
-                    <h4>Web 3</h4>
-                    <p>Web</p>
-                    <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-                  </div>
-                </div>-->
-
             </div>
 
         </div>
@@ -622,7 +592,7 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
-                        <div class="pic"><img src="assets/img/mgt/abu.jpg" alt=""></div>
+                        <div class="pic"><img src="assets/img/mgt/shohag.jpg" alt=""></div>
                         <div class="details">
                             <h4>Abu Hossain</h4>
                             <span>Executive Officer (Business Promotion & Support)</span>
@@ -923,6 +893,22 @@
     </section><!-- End Contact Section -->
 
 </main><!-- End #main -->
+
+<section id="pay_partner" class="wow fadeInUp">
+    <div class="container">
+        <div class="section-header">
+            <h2>Payment Partners</h2>
+            <p>Pay with AamarPay Gateway</p>
+
+        </div>
+
+        <div>
+            <img style="padding: 10px" width="1100px" src="assets/img/aamarPay.jpg" alt="">
+        </div>
+
+    </div>
+</section>
+
 
 <!-- ======= Footer ======= -->
 <footer id="footer">
